grafana-loki-promtail/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-grafana
  namespace: grafana
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app: grafana
